syntax = "proto3";

package integrate;

option go_package = "api/integrator/v1;v1";

service IntegrateService {
  rpc integrate(IntegrateRequest) returns (IntegrateReply);
}

message IntegrateRequest {
  uint64 planId = 1;
  int32 stressTime = 2;
  int32 intervalLen = 3;
  int32 stressType = 4;
  int32 stressMode = 5;
  int64 startTime = 6;
  int32 stepIntervalTime = 7;
  string userId = 8;
  repeated Task tasks = 9;
}

message Task {
  uint64 taskId = 1;
  string url = 2;
  int32 requestContentLength = 3;
}

message IntegrateReply {
  int32 code = 1;
}